WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
238884
Fix assertion in CSSPropertyAnimationWrapperMap constructor
https://bugs.webkit.org/show_bug.cgi?id=238884
Summary
Fix assertion in CSSPropertyAnimationWrapperMap constructor
Ada Chan
Reported
2022-04-06 11:35:27 PDT
Fix assertion in CSSPropertyAnimationWrapperMap constructor
Attachments
Patch
(2.04 KB, patch)
2022-04-06 11:36 PDT
,
Ada Chan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ada Chan
Comment 1
2022-04-06 11:36:55 PDT
Created
attachment 456843
[details]
Patch
EWS
Comment 2
2022-04-06 13:24:19 PDT
Committed
r292497
(
249345@main
): <
https://commits.webkit.org/249345@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 456843
[details]
.
Radar WebKit Bug Importer
Comment 3
2022-04-06 13:25:17 PDT
<
rdar://problem/91372713
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug