Fix assertion in CSSPropertyAnimationWrapperMap constructor https://bugs.webkit.org/show_bug.cgi?id=238884

Patch by Ada Chan <adachan@apple.com> on 2022-04-06
Reviewed by Antoine Quint.

Add more non-animatable properties to the switch statement.

* animation/CSSPropertyAnimation.cpp:
(WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):

Canonical link: https://commits.webkit.org/249345@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292497 268f45cc-cd09-0410-ab3c-d52691b4dbfc